Fixed text spacing

--- a/modules/hub/src/main/webapp/css/design.css
+++ b/modules/hub/src/main/webapp/css/design.css
@@ -196,3 +196,7 @@ input {
 .align-top {
     align-content: start;
 }
+
+.spaced-text {
+    margin: 0.5rem;
+}
